# React_RAG

./: .env  README.md  deploy.sh
backend/: pyproject.toml  requirements.txt  vercel.json
backend/src/: app.py  qdrant.py  rag.py
frontend/: package-lock.json
frontend/src/: App.css  App.js  QuestionForm.js
